Update to index.

--- a/About.html
+++ b/About.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>About Legend Sound</title>
-     <link href="https://fonts.googleapis.com/css?family=Oswald:200,400" rel="stylesheet"> 
+     <link href="https://fonts.googleapis.com/css?family=Oswald:200,400" rel="stylesheet">
      <link href="About.css" type="text/css" rel="stylesheet">
      <link href="navigation.css" type="text/css" rel="stylesheet">
      <script src=
@@ -11,27 +11,27 @@ libs/jquery/1.11.2/jquery.min.js">
 </script>
 </head>
 <body>
-    
-     <a href="Legend Sound.html"><img src="Legend%20Sound%20Logo%20White.png" alt="Legend Sound Logo" class="logo"></a>  
+
+     <a href="index.html"><img src="Legend%20Sound%20Logo%20White.png" alt="Legend Sound Logo" class="logo"></a>
   <nav role="navigation">
   		<div class="navigation">
      		<button id="hamburger">&#9776</button>
       		<ul>
       			<li class="nav" ><img src="Legend Sound Logo White.png" id="nav-logo" alt="legend sound logo"></li>
-      			<li class="nav"><a href="Legend Sound.html">Home</a></li>
+      			<li class="nav"><a href="index.html">Home</a></li>
       			<li class="nav"><a href="Music.html">Music</a></li>
-      			<li class="nav"><a href="About.html">About</a></li> 
+      			<li class="nav"><a href="About.html">About</a></li>
       			<li class="nav"><a href="Blog.html">Blog</a></li>
       			<li class="nav"><a href="Contact.html">Contact</a></li></ul>
-   		</div> 
+   		</div>
 	</nav>
   <div id="header">
     <div class="header-image">
       </div>
-    
+
     <div class="header-text">
       <h1 id="header-main">About</h1>
-      <a href="#scroll"><img src="Arrow%20-2.png" alt="scroll down for more" class="scroll"></a></div></div>  
+      <a href="#scroll"><img src="Arrow%20-2.png" alt="scroll down for more" class="scroll"></a></div></div>
     <div class="main">
     <div id="about">
     	<h3 class="about">About the Founder</h3>
