Commented out quote.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@ libs/jquery/1.11.2/jquery.min.js">
       <h2 id="subheading">Bringing Music Lovers Excellent Music</h2>
       <a href="#scroll"><img src="Arrow%20-2.png" alt="scroll down for more" class="scroll"></a></div>
       </div>
-   <div class="quote">
+<!--This is the quote builder. To be moved elsewhere -->
+  <!-- <div class="quote">
   		<div id="quote-tab">Get your free quote now!</div>
   		<div id="quote-body">
   			<form action="quote.php">
@@ -535,7 +536,7 @@ libs/jquery/1.11.2/jquery.min.js">
   				<span><input type="submit" value="submit  &raquo"></span>
   			</form>
   		</div>
-   </div>
+   </div> -->
 
   <div class="main">
 
