--- a/index.html
+++ b/index.html
@@ -556,9 +556,9 @@ libs/jquery/1.11.2/jquery.min.js">
         </div>
     </div>
 
-   <!--- <div id="recent">
+   <!-- <div id="recent">
       <h3>Recent Posts</h3>
-    </div> --->
+    </div> -->
     <div id="mission">
       <h4>"Legend Sound is committed to bringing music lovers excellent music by partnering
 with independent artists and transferring the Arts to the digital realm through quality recording."</h4>
